cmake_minimum_required(VERSION 3.13)
project(cpp)

set(CMAKE_CXX_STANDARD 11)

add_executable(cpp acwing/junior/Sum_of_submatrix.cpp acwing/junior/third.cpp acwing/junior/charfen.cpp acwing/junior/chafenjuzhen.cpp acwing/junior/erjinzhizhong1degeshu.cpp acwing/junior/lisanhua.cpp acwing/junior/qujianhe.cpp acwing/junior/qujianhebing.cpp acwing/junior/twonum_sum.cpp acwing/junior/containChild.cpp acwing/junior/singlelist.cpp acwing/junior/singleLinklist.cpp acwing/junior/A826.cpp acwing/junior/shuanglianbiao.cpp acwing/junior/monizhan.cpp acwing/junior/insertsort.cpp acwing/junior/moniduilie.cpp acwing/junior/dandiaozhan.cpp acwing/junior/huadongchuangkou.cpp acwing/junior/kmp.cpp acwing/junior/trie.cpp acwing/junior/maxyihuopair.cpp acwing/junior/bingchaji.cpp acwing/junior/liantongkuaizhongdiandeshuliang.cpp)